--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ rvm:
  - 2.3
  - 2.4
  - jruby-9.1.12.0
+addons:
+  apt:
+    packages:
+      - rabbitmq-server
 services:
  - rabbitmq
 sudo: false
