--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,11 +15,14 @@ jobs:
       - image: << parameters.ruby-image >>
     steps:
       - checkout
-      - ruby/install-deps:
-          with-cache: false
+      - run:
+          name: Install bundler
+          command: gem install bundler
       - run:
           name: Which bundler?
           command: bundle -v
+      - ruby/install-deps:
+          with-cache: false
       - ruby/rspec-test
 
 # strangely, there seems to be very little documentation about exactly how martix builds work.
