--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,14 +15,12 @@ jobs:
       - image: << parameters.ruby-image >>
     steps:
       - checkout
-      - run:
-          name: Install bundler
-          command: gem install bundler
+      - ruby/install-deps:
+          bundler-version: 2.1.4
+          with-cache: false
       - run:
           name: Which bundler?
           command: bundle -v
-      - ruby/install-deps:
-          with-cache: false
       - ruby/rspec-test
 
 # strangely, there seems to be very little documentation about exactly how martix builds work.
