--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ jobs:
         type: string
     docker:
       - image: << parameters.ruby-image >>
+      - image: rabbitmq
+
     steps:
       - checkout
       - run:
