--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,3 +54,4 @@ workflows:
                 - circleci/ruby:2.7
                 - circleci/jruby:9.1
                 - circleci/jruby:9.2
+                - circleci/jruby:9.3
